<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#fff"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <TextView
            android:id="@+id/widget_title"
            android:text="@string/appwidget_title"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:paddingTop="@dimen/widget_padding"
            android:textSize="@dimen/widget_text"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/widget_see_button"
            android:text="@string/widget_see_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_below="@+id/widget_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/widget_next_button"
            android:text="@string/widget_next_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_below="@+id/widget_title"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/widget_ingredients"
            android:padding="@dimen/widget_ingredient_padding"
            android:layout_below="@id/widget_next_button"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_ingredient_height"/>

</RelativeLayout>