<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
    />

    <ProgressBar
            android:id="@+id/pb_loading"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:layout_width="@dimen/loading_progress_bar_width"
            android:layout_height="@dimen/loading_progress_bar_height" />

    <LinearLayout
            android:id="@+id/error_view"
            android:visibility="invisible"
            android:padding="@dimen/error_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_error_title"
                android:text="@string/error_title"
                android:textSize="@dimen/error_title_text_size"
                android:textColor="@color/colorError"
                android:gravity="center"
                android:layout_margin="@dimen/error_title_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/tv_error_message"
                android:text="@string/error_message"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/error_button"
                android:text="@string/error_button"
                android:layout_margin="@dimen/error_button_margin"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
